--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 	
 </head>
 <body>
+	
 	<div class="parallax-wrap">
 		<span value="-15"></span>
 		<span value="5"></span>
 		<span value="30"></span>
+		<h1 style="text-align: center;">Mouse Parallax effect</h1>
 		<span value="-5"></span>
 		<span value="15"></span>
 	</div>
